--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,47 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+body {
+  background-image: linear-gradient(
+      45deg,
+      transparent 0%,
+      transparent 55%,
+      rgba(64, 64, 64, 0.04) 55%,
+      rgba(64, 64, 64, 0.04) 76%,
+      transparent 76%,
+      transparent 100%
+    ),
+    linear-gradient(
+      135deg,
+      transparent 0%,
+      transparent 14%,
+      rgba(64, 64, 64, 0.04) 14%,
+      rgba(64, 64, 64, 0.04) 41%,
+      transparent 41%,
+      transparent 100%
+    ),
+    linear-gradient(
+      45deg,
+      transparent 0%,
+      transparent 2%,
+      rgba(64, 64, 64, 0.04) 2%,
+      rgba(64, 64, 64, 0.04) 18%,
+      transparent 18%,
+      transparent 100%
+    ),
+    linear-gradient(
+      135deg,
+      transparent 0%,
+      transparent 61%,
+      rgba(64, 64, 64, 0.04) 61%,
+      rgba(64, 64, 64, 0.04) 71%,
+      transparent 71%,
+      transparent 100%
+    ),
+    linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255)) !important;
+  width: 100%;
+  min-height: 100vh;
+}
 
 .debit-card-bg1 {
   background-image: linear-gradient(
