--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
-body {
+/* body {
   background-image: linear-gradient(
       45deg,
       transparent 0%,
@@ -53,7 +53,7 @@ body {
     linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255)) !important;
   width: 100%;
   min-height: 100vh;
-}
+} */
 
 .debit-card-bg1 {
   background-image: linear-gradient(
