--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,24 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
+body{
+  color: #ffff;
+}
+a{
+  color: #ffff;
+}
+h1{
+  color: #ffff;
+}
+h2{
+  color: #ffff;
+}
+h3{
+  color: #ffff;
+}
+div{
+  color: #ffff;
+}
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
