--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,69 +11,28 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-body{
+body {
   color: #121212;
+  font-family: "Poppins";
 }
-a{
+a {
   color: #ffff;
 }
-h1{
+h1 {
   color: #ffff;
 }
-h2{
+h2 {
   color: #ffff;
 }
-h3{
+h3 {
   color: #ffff;
 }
-div{
-  
+div {
 }
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
 }
-/* body {
-  background-image: linear-gradient(
-      45deg,
-      transparent 0%,
-      transparent 55%,
-      rgba(64, 64, 64, 0.04) 55%,
-      rgba(64, 64, 64, 0.04) 76%,
-      transparent 76%,
-      transparent 100%
-    ),
-    linear-gradient(
-      135deg,
-      transparent 0%,
-      transparent 14%,
-      rgba(64, 64, 64, 0.04) 14%,
-      rgba(64, 64, 64, 0.04) 41%,
-      transparent 41%,
-      transparent 100%
-    ),
-    linear-gradient(
-      45deg,
-      transparent 0%,
-      transparent 2%,
-      rgba(64, 64, 64, 0.04) 2%,
-      rgba(64, 64, 64, 0.04) 18%,
-      transparent 18%,
-      transparent 100%
-    ),
-    linear-gradient(
-      135deg,
-      transparent 0%,
-      transparent 61%,
-      rgba(64, 64, 64, 0.04) 61%,
-      rgba(64, 64, 64, 0.04) 71%,
-      transparent 71%,
-      transparent 100%
-    ),
-    linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255)) !important;
-  width: 100%;
-  min-height: 100vh;
-} */
 
 .debit-card-bg1 {
   background-image: linear-gradient(
@@ -122,11 +84,12 @@ input[type="number"] {
       rgba(67, 67, 67, 0.05) 50%,
       rgba(67, 67, 67, 0.05) 100%
     ),
-    radial-gradient(
+   radial-gradient(
       circle at center center,
-      rgb(255, 0, 0) 0%,
-      rgb(198, 12, 55) 81%
-    ) !important;
+      #404040 0%,  
+      #1a1a1a 60%, 
+      #000000 80%  
+    )
 }
 
 .rotate > .div1 {
